--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Phonebook App</title>
-  <link rel="stylesheet" href="./style.css">
-  
+  <meta charset="UTF-8">
+  <title>Phonebook</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <h2>Phonebook</h2>
-
-  <form id="contact-form">
-    <input type="text" id="name" placeholder="Name" required />
-    <input type="text" id="phone" placeholder="Phone Number" required />
-    <input type="hidden" id="contactId" />
-    <button type="submit">Save Contact</button>
-  </form>
+<body class="container py-4">
+  <h2>Phonebook with Fetch API</h2>
  
-  <input type="text" id="search" placeholder="Search contacts..." />
-  <button id="viewBtn"> View Contacts</button>
-  <ul id="contact-list" style="display: none;"></ul>
+  <form id="contactForm" class="mb-3">
+    <input type="text" id="name" placeholder="Name" class="form-control mb-2" required />
+    <input type="text" id="number" placeholder="Number" class="form-control mb-2" required />
+    <button class="btn btn-primary" type="submit">Add Contact</button>
+  </form>
+  <input type="text" id="search" placeholder="Search Contacts" class="form-control mb-3">
+  <button id="searchBtn" class="btn btn-primary mb-3">Search</button>
+  <button id="viewBtn" class="btn btn-info mb-3">View</button>
+
+  <div id="contactContainer" style="display: none;">
+    <ul id="contactList" class="list-group"></ul>
+  </div>
+  
   
 
   <script src="script.js"></script>
